--- a/_i18n/messages.properties
+++ b/_i18n/messages.properties
@@ -187,3 +187,7 @@ noData=No data found for this query
 synonyms=Filename to store sysnonyms
 keepPath=Keep table/view path (with dots)
 noColons=Replace :: in table/view path with dot
+massRename=Mass Rename fields based upon a CDS-based massExport file
+schemaCDS=CDS file to import
+prefix=New namespace
+case=case to use: camel|snake|kebab
