--- a/_i18n/messages.properties
+++ b/_i18n/messages.properties
@@ -127,6 +127,9 @@ copy2DefaultEnv=Copy .env contents to default-env.json and reformat
 copy2Env=Copy default-env.json contents to .env and reformat
 hcInstances=List all SAP HANA Cloud instances in your target Space
 hdiInstances=List all SAP HANA Cloud HDI service instances in your target Space
+sbssInstances=List all SAP HANA Cloud SBSS service instances in your target Space
+secureStoreInstances=List all SAP HANA Cloud SecureStore service instances in your target Space
+schemaInstances=List all SAP HANA Cloud Schema service instances in your target Space
 upsInstances=List all Cloud Foundry user provided service instances in your target Space
 hc_instance_name=SAP HANA Cloud Instance name
 hcStart=Start SAP HANA Cloud instance
@@ -187,3 +190,8 @@ noData=No data found for this query
 synonyms=Filename to store sysnonyms
 keepPath=Keep table/view path (with dots)
 noColons=Replace :: in table/view path with dot
+massRename=Mass Rename fields based upon a CDS-based massExport file
+schemaCDS=CDS file to import
+prefix=New namespace
+case=case to use: camel|snake|upper|lower|pacal|dot
+caseErr=Unsupported rename case type
